--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Converters.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Converters.axaml
@@ -32,8 +32,9 @@
     <converters:FormatSizeConverter x:Key="FormatSizeConverter" />
     <converters:DateTimeConverter x:Key="DateTimeConverter" />
     <converters:SplitStringConverter x:Key="SplitStringConverter" />
-    <converters:CompareConverter x:Key="EqualityConverter" />
+    <converters:CompareConverter x:Key="EqualsConverter" />
     <converters:CompareConverter ComparisonCondition="{x:Static converters:ComparisonCondition.NotEqual}" x:Key="NotEqualsConverter" />
+    <converters:CompareConverter ComparisonCondition="{x:Static converters:ComparisonCondition.GreaterThan}" x:Key="GreaterThanConverter" />
     <converters:ExceptionToStringConverter x:Key="ExceptionToStringConverter" />
     <converters:CommandToCommandNameConverter x:Key="CommandToCommandNameConverter" />
     <converters:ItemToImageConverter x:Key="ItemToImageConverter" />
