RapidTravel display name

--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
@@ -642,7 +642,7 @@
 
                                 <TextBlock Text="Filter " />
 
-                                <TextBlock Text="{Binding AppState.RapidTravelText}" />
+                                <TextBlock Text="{Binding AppState.RapidTravelText.Value}" />
                             </StackPanel>
                         </Grid>
 
